# cosmic-printers

./: Cargo.toml  README.md
printers-client/: Cargo.toml
printers-client/examples/: list_printer_attrs.rs  watch_printers.rs
printers-client/src/: lib.rs
printers-core/: Cargo.toml
printers-core/src/: error.rs  grouping.rs  lib.rs  types.rs
printers-server/: Cargo.toml
printers-server/src/: avahi.rs  backend.rs  context.rs  ipp.rs  lib.rs  server.rs
printers-server/src/cups_backend/: discovery.rs  helpers.rs  jobs.rs  metadata.rs  mod.rs  polkit_helper.rs  printer.rs
printers-server/src/cups_backend/helpers/: attributes.rs  conversion.rs  destinations.rs  identity.rs  ipp.rs  local_socket.rs  mod.rs  options.rs
printers-server/src/printer_application_backend/: mod.rs  system.rs
