[package]
name = "cosmic-settings-printers-core"
version = "0.1.0"
edition = "2024"

[dependencies]
nix = { version = "0.30", features = ["net"] }
serde = { version = "1.0", features = ["derive"] }

[dependencies.zlink]
workspace = true
features = ["introspection", "tracing"]

[dev-dependencies]
serde_json = "1.0"
