[package]
name = "cosmic-settings-printers-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["sync", "rt", "macros", "net", "time"] }
cosmic-config.workspace = true
cosmic-settings-printers-core = { path = "../printers-core" }
cups_rs = { git = "https://github.com/Abd002/cups-rs.git", branch = "cups3-pr6-signatures" }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }

[dependencies.zlink]
workspace = true
default-features = false
features = ["server", "service", "tokio", "tracing"]
